--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,8 +1,36 @@
+<style>
+    nav {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+        background-color: #f5f5f5;
+        width: 100%;
+    }
+
+    .btn-group {
+        gap: 10px;
+    }
+
+    .logo a {
+        color: #000000;
+        text-decoration: none;
+    }
+
+    .logo:hover {
+        color: #000000;
+        text-decoration: none;
+    }
+</style>
 <nav>
-    <h1>StudyCity</h1>
+    <div class="logo"><a href="{% url 'index' %}" text>
+            <h1>StudyCity</h1>
+        </a></div>
+
     <div class="btn-group">
         {% if user.is_authenticated %}
-        {{request.user}} <i class="fas fa-user"></i>
+        {{ request.user }} <i class="fas fa-user"></i>
         <a href="{% url 'profile' %}">Profile</a>
         <a href="{% url 'logout' %}">Logout</a>
 
@@ -10,6 +38,6 @@
         <a href="{% url 'register' %}">Register</a>
         <a href="{% url 'login' %}">Login</a>
         {% endif %}
-        <a href={% url 'index' %}>Search</a>
+        {% comment %} <a href={% url 'index' %}>Search</a> {% endcomment %}
     </div>
 </nav>
