--- a/accounts/templates/accounts/location_detail.html
+++ b/accounts/templates/accounts/location_detail.html
@@ -41,7 +41,7 @@
                 {% if messages %}
                 <ul class="messages">
                     {% for message in messages %}
-                    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
+                    <p{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</p>
                         {% endfor %}
                 </ul>
                 {% endif %}
@@ -101,7 +101,7 @@
                             <div>
                                 <form method="post">
                                     {% csrf_token %}
-                                    <input type="text" name="review" placeholder="Your review" class="review-input" />
+                                    <input type="text" name="review" required="required" placeholder="Your review" class="review-input" />
                                     <br />
                                     <div class="range">
                                         <p>0</p>
