--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -28,6 +28,9 @@
       const urlSearchParams = new URLSearchParams(window.location.search);
       const params = Object.fromEntries(urlSearchParams.entries());
 
+
+      // console.log(params)
+
       if (params.rating) {
         selectRating(params.rating);
       }
@@ -366,9 +369,9 @@
                       <i class="fas fa-plug" id="charging5" onclick="selectCharging(5)"></i>
                     </div>
 
-                   <div class="form-check 311-switch my-4">
-                      <input name="311_check" class="form-check-input" type="checkbox" style="width:15px;height:20px; "  id="flexSwitchCheck" />
-                      <label for="311_check"> <h4>311 Noise Complaints</h4></label>
+                    <div>
+                      <input name="311_check" type="checkbox" style="width:15px;height:20px;">
+                      <label for="311_check"> <h4>No 311 Complaints</h4></label>
                     </div>
 
                     <input type="submit" id="searchLocation" class="btn btn-primary" value="Find me Study Spaces!" />
