--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -396,14 +396,17 @@
                       <i class="fas fa-plug" id="charging4" onclick="selectCharging(4)"></i>
                       <i class="fas fa-plug" id="charging5" onclick="selectCharging(5)"></i>
                     </div>
-
-                    <div class="btn btn-primary" onclick="clearFilter()"> Clear Filter
+                    <div class="mb-3">
+                      <div class=" btn btn-secondary" onclick="clearFilter()"> Clear Filters
+                      </div>
                     </div>
+
 
                     {% comment %} <div class="form-check 311-switch my-4">
                       <input name="311_check" class="form-check-input" type="checkbox" id="flexSwitchCheck" />
                       <label for="311_check">311 Noise Complaints</label>
                     </div> {% endcomment %}
+
 
                     <input type="submit" id="searchLocation" class="btn btn-primary" value="Find me Study Spaces!" />
                   </div>
