--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -122,7 +122,7 @@
 
     const selectRating = (rating) => {
       if (rating == 0) {
-        $("ratingInput").val("");
+        $("#ratingInput").val("");
       }
       for (let index = 1; index <= rating; index++) {
         $(`#rating${index}`).css("color", "gold");
