--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,72 +1,65 @@
 {% load crispy_forms_tags %}
+{% load static %}
 <!-- <!DOCTYPE html> -->
 <html>
-{% if messages %}
-    <ul class="messages">
-        {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+
+
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
 </script>
+{% comment %} <script src="https://cdn-tailwindcss.vercel.app/"></script> {% endcomment %}
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
     integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous" />
 <style>
-    nav {
+    fieldset {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        padding: 10px 20px;
-        background-color: #f5f5f5;
+        flex-direction: column;
+        gap: 20px;
+        max-width: 500px;
+        margin: auto;
     }
-    .logo a {
-      color: #000000;
-      text-decoration: none;
+
+    fieldset label {
+        font-size: 1.2em;
+        margin-bottom: 10px;
     }
-    .logo:hover {
-      color: #000000;
-      text-decoration: none;
+
+    fieldset input {
+        width: 100%;
+        padding: 10px;
+        border: none !important;
+        border-radius: 4px;
+        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+        height: 50px;
     }
-    .btn-group {
-        gap: 10px;
+
+    fieldset input:focus {
+        border: none !important;
+        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1) !important;
     }
 </style>
 </head>
 
 <body>
-    <nav>
-        <div class="logo"><a href="{% url 'index' %}" text><h1>StudyCity</h1></a> </div>
+    {% include 'nav.html'%}
 
-        <div class="btn-group">
-
-            {% if user.is_authenticated %}
-            {{request.user}} <i class="fas fa-user"></i>
-            <a href="{% url 'index' %}">Exit Profile</a>
-            <a href="{% url 'logout' %}">Logout</a>
-
-            {% else %}
-            <a href="{% url 'register' %}">Register</a>
-            <a href="{% url 'login' %}">Login</a>
-            {% endif %}
-
-
-        </div>
-    </nav>
-
-
-
-    <div class="content-section">
-        <div class="media">
-            <img class="rounded-circle account-img" height="200" width="200" src="{{ user.profile.image.url }}">
-            <div class="media-body">
-                <h2 class="account-heading">{{ user.username }}</h2>
+    <div class="text-center d-flex flex-column container">
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <div class="alert alert-primary mt-2" role="alert">
+                {{ message }}
+            </div>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        <div class="mt-3">
+            <img class="rounded-circle" height="200" width="200" src="{{ user.profile.image.url }}">
+            <div class="">
+                <h2 class="mt-3">{{ user.username }}</h2>
                 {% if user.profile.business_account %}
                 <p class="text-secondary">Business Account &#10004;&#65039;</p>
                 {% endif %}
@@ -92,14 +85,13 @@
         </div>
         <form method="POST" enctype="multipart/form-data">
             {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Profile</legend>
-                {#            {% crispy u_form %}#}
+            <fieldset>
+
                 {{ u_form|crispy }}
                 {{ p_form|crispy }}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Save Changes</button>
+                <button class="mt-3 btn btn-secondary" type="submit">Save Changes</button>
             </div>
         </form>
         <!-- <span><a href="{% url 'user' %}">Exit Profile</a></span>
