--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,13 +1,11 @@
 html,
 body {
   height: 100%;
-  margin: 0;
+  margin: 0 !important;
   padding: 0;
 }
 #map {
-  height: 100%;
-  width: 100vw;
-  flex: 1;
+  min-height: 80vh;
 }
 
 img {
@@ -15,22 +13,56 @@ img {
 }
 
 .main {
-  height: 100%;
-  margin: 0;
-  padding: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .container {
-  width: 50vw;
-  flex: 1;
+  width: 80vw;
+  max-width: 1000px;
 }
 
 .dollar {
   font-size: 25px;
 }
 
+.searchBar {
+  padding: 100px 0px;
+  width: 600px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.submit-btn {
+  background-color: rgb(188, 81, 0);
+  border: none;
+  padding: 10px 15px;
+  font-size: 22px;
+  margin: 15px 0px;
+  border-radius: 8px;
+  color: white;
+}
+.submit-btn:hover {
+  background-color: rgb(171, 74, 0);
+}
+.searchBar-wrapper {
+  background-image: url("/static/images/banner.jpg");
+  background-size: cover;
+}
+.searchBar h1 {
+  text-align: center;
+  margin-bottom: 25px;
+}
+.searchBar #locationInput {
+  width: 100%;
+  border: none;
+  font-size: 30px;
+  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+  margin: 10px 0px;
+  padding: 10px;
+}
 .pointer {
   cursor: pointer;
 }
