--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -15,12 +15,6 @@
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default">
   </script>
   <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
-  {% comment %}
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
-  </script> {% endcomment %}
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -238,18 +232,18 @@
             </button>
           </div>
           <input type="submit" id="searchLocation" class="submit-btn" value="Find me Study Spaces!" />
-          <div class="form-check mt-3">
+          <div class="form-check mt-2 use-current">
             <input name="useCurrentLocation" class="form-check-input" type="checkbox" value="" id="useCurrentLocation"
               onclick="toggleCurrentLocation()">
             <input type="hidden" name="longitude" id="longitude" />
             <input type="hidden" name="latitude" id="latitude" />
 
-            <i class="bi bi-geo-alt"></i>
-            <label class="form-check-label" for="useCurrentLocation">
+            <label class="form-check-label pointer" for="useCurrentLocation">
+              <i class="bi bi-geo-alt"></i>
               Use Current Location
             </label>
           </div>
-          <div class="ml-3" id="locationLoading"></div>
+          <div class="mt-3" id="locationLoading"></div>
 
 
         </div>
@@ -362,11 +356,11 @@
       {% if businesses %}
       <h4>Your Study Locations:</h4>
       {% elif recommendations %}
-      <h6>We're sorry, no study locations met your criteria</h6>
+      <p class="alert">We're sorry, no study locations met your criteria</p>
       {% endif %}
       <div class="row">
         {% for data in businesses %}
-        <div class="col my-2">
+        <div class="col my-3">
           <div class="card m-auto" style="width: 18rem">
             <img class="card-image-top" src="{{ data.image_url }}" alt="Card image cap" />
             <div class="card-body">
@@ -399,9 +393,9 @@
       <h4>Suggested Study Locations:</h4>
       <div class="row">
         {% for data in recommendations %}
-        <div class="col-4 my-2">
-          <div class="card" style="width: 18rem">
-            <img class="card-img-top" src="{{ data.image_url }}" alt="Card image cap" />
+        <div class="col my-2">
+          <div class="card m-auto" style="width: 18rem">
+            <img class="card-image-top" src="{{ data.image_url }}" alt="Card image cap" />
             <div class="card-body">
               <h5 class="card-title">{{ data.name }}</h5>
               <p class="card-text my-0">Phone: {{ data.phone }}</p>
@@ -414,11 +408,13 @@
                 Zip Code: {{data.location.zip_code}}
               </p>
               <a href="{{data.url}}" target="_blank" class="card-text pointer">Visit Website</a>
+              <div class="mt-2">
+                <a class="btn btn-primary" href="{% url 'locationDetail'%}?locationID={{data.id|default:''}}">
+                  View detail
+                </a>
+              </div>
               <!-- <a href="#" class="btn btn-primary">Go somewhere</a> -->
             </div>
-            <a class="" href="{% url 'locationDetail'%}?locationID={{data.id|default:''}}">
-              View detail
-            </a>
           </div>
         </div>
 
