--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -237,7 +237,7 @@
               onclick="toggleCurrentLocation()">
             <label class="form-check-label pointer" for="useCurrentLocation">
             </label>
-            <label> Use current Location</label>
+            <label> Use current location</label>
             <input type="hidden" name="longitude" id="longitude" />
             <input type="hidden" name="latitude" id="latitude" />
 
