--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,11 +1,11 @@
-@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 html,
 body {
   height: 100%;
   margin: 0 !important;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 #map {
   min-height: 80vh;
