--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -336,13 +336,13 @@
                       <div class=" btn btn-secondary" onclick="clearFilter()"> Clear Filters
                       </div>
                     </div>
-                    {% comment %} <div class="form-check 311-switch my-4">
+                      <div class="form-check 311-switch my-4">
                       <input name="311_check" class="form-check-input" type="checkbox" style="width:15px;height:20px; "
                         id="flexSwitchCheck" />
                       <label for="311_check">
-                        <h4>311 Noise Complaints</h4>
+                        <h4>No NYC 311 Complaints</h4>
                       </label>
-                    </div> {% endcomment %}
+                    </div>
                   </div>
                 </div>
               </div>
